# readability

./: Cargo.toml
src/: extractor.rs  lib.rs  scorer.rs
tests/: lib.rs
