[package]
name = "readability-async"
version = "0.2.0"
authors = ["Mike Dallas <mcdallas@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/mcdallas/readability"
repository = "https://github.com/mcdallas/readability.git"
description = "async fork of 'readability' crate"
keywords = ["readability"]
categories = []
edition = "2018"

[dependencies]
regex = "1.4"
url = "2.2"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
lazy_static = "1.4"

[dependencies.reqwest]
version = "0.11"
optional = true

[features]
default = ["reqwest"]
